# game-of-life-rust-cli

./: Cargo.toml
src/: main.rs
